[package]
name = "card-io-tuner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/emilk/egui.git" }
egui_plot = { git = "https://github.com/emilk/egui.git" }
env_logger = "0.10"
log = "0.4"
rfd = "0.12.0"
rustfft = "6.1.0"
serde = { version = "1.0", features = ["derive"] }
signal-processing = { git = "https://github.com/card-io-ecg/card-io-fw.git" }
# signal-processing = { path = "../card-io-fw/signal-processing" }
toml = "0.8.0"
