[package]
name = "card-io-tuner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23"
egui_dock = "0.8"
egui_plot = "0.23"
env_logger = "0.10"
log = "0.4"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
rfd = "0.12.0"
rustfft = "6.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
signal-processing = { git = "https://github.com/card-io-ecg/card-io-fw.git", features = ["alloc", "std", "dyn_filter"] }
# signal-processing = { path = "../card-io-fw/signal-processing", features = ["alloc", "std", "dyn_filter"] }
toml = "0.8.0"

[target.'cfg(windows)'.dependencies]
rfd = { version = "0.12.0", features = ["common-controls-v6"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.1"

[features]
default = ["debug"]
debug = []
